# aoc_2023

./: Cargo.toml  README.md  justfile
daily-template/: Cargo.toml
daily-template/src/: part1.rs  part2.rs
day-01/: Cargo.toml
day-01/src/: custom_error.rs  part1.rs  part2.rs
day-02/: Cargo.toml
day-02/src/: part1.rs  part2.rs
day-03/: Cargo.toml
day-03/src/: lib.rs  part1.rs  part2.rs  utils.rs
day-08/: Cargo.toml
day-08/benches/: benchmarks.rs
day-08/src/: custom_error.rs  part1.rs  part2.rs  utils.rs
